# ez-fuzzy

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh  clean.sh  ez-fuzzy.desktop  resources.qrc  run.sh
src/: fuzzymatcher.cpp  fuzzymatcher.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  syntaxhighlighter.cpp  syntaxhighlighter.h
